add ch9 and various mods in other chapters

--- a/cpp_notebook/primer/ch-02.md
+++ b/cpp_notebook/primer/ch-02.md
@@ -69,9 +69,9 @@
 		- &ast;NOTE: i'm not sure about *all* technical details about when value initialization happens, most information here is from other chapters.
 		- happens when:
 			- we define a [local *static* object](https://github.com/tedklin/pseudoblog/blob/master/cpp_notebook/primer/ch-06.md#basics-61) without an initializer.
-			- we specify a dimension but use an empty list initializer for built-in arrays (see [ch3](https://github.com/tedklin/pseudoblog/blob/master/cpp_notebook/primer/ch-03.md#built-in-arrays-35)).
-				- note that a built-in array will still be *default initialized* if we don't provide an initializer at all!
-			- we only supply only a size to something like a vector to be initialized.
+			- we specify a dimension but use an empty list initializer for [built-in arrays](https://github.com/tedklin/pseudoblog/blob/master/cpp_notebook/primer/ch-03.md#built-in-arrays-35).
+				- note that a built-in array itself will still be *default initialized* if we don't provide an initializer at all!
+			- we only supply a size to a container like a [vector](https://github.com/tedklin/pseudoblog/blob/master/cpp_notebook/primer/ch-03.md#library-vector-type-33) to be initialized.
 		-  the library implicitly creates a value-initialized element initializer for each element:
 			- **uses zero for built-in types.**
 			- **uses the default constructor for class types**, see bolded note above.
