--- a/cpp_notebook/primer/ch-03.md
+++ b/cpp_notebook/primer/ch-03.md
@@ -56,6 +56,7 @@ string s4(n, 'c'); // initialize s4 with n copies of the character 'c'
 			- **subscripting an empty string is undefined!**
 		- any time we use a subscript, we must ensure that there is a value at the given location.
 			- in this use case, we would check that the string isn't empty before using the [ ] operator.
+	- more operations in Primer ch9.
 ~~~
 // string operations
 // 's' is string, 'os' is output stream, 'is' is input stream
@@ -125,7 +126,7 @@ cout << punct_cnt << '\n';
 			- **ensure that our bracketed list initializer actually performs list initialization!** (when that is our goal)
 	- direct initialize from a specified number of elements with each element [value initialized](https://github.com/tedklin/pseudoblog/blob/master/cpp_notebook/primer/ch-02.md#variables-22).
 		- we also have the option of providing a default initial value for all elements.
-	- direct initialize from iterators that point to a convertible element type (includes built-in array iterators, see section below on arrays)
+	- direct initialize from a range defined by iterators of another container (including built-in arrays) of a convertible element type.
 ~~~
 // how i initialize a vector (all direct initializations)
 vector<T> v1; // default initialize empty vector of type T
@@ -133,7 +134,7 @@ vector<T> v2(v1); // v2 has a copy of each element in v1
 vector<T> v3{a, b, c}; // v3 is list-initialized
 vector<T> v4(n, val); // v4 has n elements each with value val
 vector<T> v5(n); // v5 has n elements each with type T's value-initializer
-vector<T> v6(begin(otherContainer), end(otherContainer)); // v6 is a vector corresponding to a separate container
+vector<T> v6(begin(otherContainer), end(otherContainer)); // v6 is a vector copied from a range of another container
 ~~~
 
 - vector operations
@@ -145,6 +146,7 @@ vector<T> v6(begin(otherContainer), end(otherContainer)); // v6 is a vector corr
 			- **remember to only subscript in range and on nonempty vectors, otherwise behavior is undefined!**
 		- two vectors can be compared if the element type can be compared. 
 			- dictionary ordering like strings.
+	- more operations in ch9 of Primer.
 
 ### misc conventions and tips
 - be careful about curly braces vs parentheses!
@@ -172,6 +174,7 @@ vector<T> v6(begin(otherContainer), end(otherContainer)); // v6 is a vector corr
 		- **dereferencing an invalid iterator or an off-the-end iterator has undefined behavior.**
 		- **incrementing an off-the-end iterator is not allowed.**
 	- iterators are equal (==) if they denote the same element or if they are both off-the-end iterators for the same container.
+		- **note that [*begin() == end()*](https://stackoverflow.com/questions/17796200/is-begin-end-for-any-empty-vector) for an empty container** (and thus *begin()* for an empty container should not be dereferenced).
 	- **the *arrow operator ->* combines dereference and member access into a single operation.**
 		- *iter->mem* is a synonym for *(&ast;iter).mem*
 	- increment / decrement to move iterator forward/backward one position
