--- a/cpp_notebook/primer/ch-05.md
+++ b/cpp_notebook/primer/ch-05.md
@@ -32,7 +32,7 @@
 		- loop variable must be a reference type if we want to write to the elements in the sequence.
 		- [**general summary of how to declare variable in range for loops**](https://stackoverflow.com/questions/15176104/c11-range-based-loop-get-item-by-value-or-reference-to-const)
 	- on each iteration, the control variable is defined and intialized by the next value in the sequence.
-	- we can't add elements to a container in a range for because the loop control relies on a cached *end()* iterator.
+	- **we can't add elements to the container being iterated over in range for because the underlying loop control relies on a cached *end()* iterator.**
 - jump statements
 	- *break* terminates the nearest enclosing iteration or switch statement.
 	- *continue* terminates the current iteration of the nearest enclosing loop and immediately begins the next iteration.
