--- a/cpp_notebook/primer/ch-02.md
+++ b/cpp_notebook/primer/ch-02.md
@@ -59,7 +59,7 @@
 	- ***default initialization***
 		- happens when:
 			- nonstatic variables are defined without an explicit initializer at block scope (inside any brackets).
-			- members of a class are not explicitly initialized in a constructor initializer list.
+			- members of a class are not explicitly initialized with an in-class initializer or in a constructor initializer list.
 		- **built-in type variables (including arrays) are default initialized to *undefined* value.**
 			- defined outside any function body are initialized to zero.
 		- [classes use default constructors to control how objects of that class type are default initialized and value initialized.](https://github.com/tedklin/pseudoblog/blob/master/cpp_notebook/primer/ch-07.md#constructors)
@@ -228,11 +228,11 @@ const double *const pip = &pi; // const pointer to object of type const double
 			- we can convert a low-level nonconst to a low-level const but not the other way around.
 			- note to self (idk if this is technically correct lol) think of low-level const as a restriction that we can add but not remove to make the right side match the type of the left side.
 	
-***constant expressions*** (also see ch6)
+***constant expressions***
 
 - **constant expressions are expressions whose values cannot change and that can be evaluated at compile time.**
 	- can be a literal or a const object that is initialized from a constant expression.
-	- we can have functions that are constant expressions (see ch6) and can be used as constant expression initializers.
+	- we can have [functions that are constant expressions](https://github.com/tedklin/pseudoblog/blob/master/cpp_notebook/primer/ch-06.md#other-features-65) that can also be used as constant expression initializers.
 - we can ask the compiler to verify that an object's initializer is a constant expression by using the ***constexpr*** keyword in the object's declaration. (C++11)
 	- can only use for literal types (arithmetic types, references, and pointers).
 	- *constexpr* imposes a top-level const, so order of declaration in some compound-type cases would look different from previous rules.
@@ -253,19 +253,19 @@ const double *const pip = &pi; // const pointer to object of type const double
 	- can be tricky with pointers
 - ***auto*** type specifier (C++11)
 	- let compiler deduce the type for us from the initializer.
-	- refer to Primer for rules and examples.
-	- & (address-of) of an int object has type int*
-	- & of a const object has type quality low-level const
+	- *auto* doesn't capture reference types and top-level consts. if we want the deduced type to be a reference type or have a top-level const, we must say so explicitly (in addition to the auto keyword).
+		- note: not 100% sure about this.
+	- & (address-of) of an int object has deduced type int*
+	- refer to Primer for complete rules and examples.
 - ***decltype*** type specifier (C++11)
 	- returns the type of its operand (gives the same type as the type that would've been returned by the expression inside the operand).
-	- refer to Primer.
+	- refer to Primer for complete rules and examples.
 	
 
 ## introductory data structure creation (2.6)
 
 ### new core ideas
-- ***struct*** keyword to define classes.
-- need semicolon to close class definition.
+- header files as interface, source files as implementation.
 - the **preprocessor** runs before the compiler. 
 	- it replaces *#include* directives with the contents of the specified *header* and follows other directives as well.
 	- **header guards** are used by the preprocessor to protect against multiple inclusion.
@@ -288,7 +288,7 @@ struct Sales_data {
 
 ### misc conventions and tips
 - **headers should have guards!**
-	- preprocessor variables must be unique throughout the program. ensure uniqueness by basing the guard's name on the name of the class in the header.
+	- preprocessor variables must be unique throughout the program. ensure uniqueness by basing the variable name on the name of the class in the header.
 		- Sales_data.h -> SALES_DATA_H
 		
 
