small edits, add some best practices

--- a/cpp_notebook/primer/ch-03.md
+++ b/cpp_notebook/primer/ch-03.md
@@ -139,7 +139,7 @@ vector<T> v6(begin(otherContainer), end(otherContainer)); // v6 is a vector copi
 
 - vector operations
 	- ***push_back*** takes a value and "pushes" it as a new last element onto the "back" of the vector (appends value to vector).
-		- **note that a range *for* loop must not change the size of the sequence over which it is iterating.**
+		- **note that a [range for loop](https://github.com/tedklin/pseudoblog/blob/master/cpp_notebook/primer/ch-05.md#control-structures) must not change the size of the sequence over which it is iterating.**
 	- other operations on vector are similar to operations on string.
 		- **the *size()* operation and *subscript operator [ ]* use an unsigned type** (*vector< T >::size_type*).
 			- like with strings, subscript returns a *reference* to the element at the specified index.
@@ -154,7 +154,7 @@ vector<T> v6(begin(otherContainer), end(otherContainer)); // v6 is a vector copi
 - vectors grow efficiently.
 	- recall amortization in cs61b!
 	- only specify number of elements / initial value when you want all or most elements to have that initial value.
-- use [range for loops](https://github.com/tedklin/pseudoblog/blob/master/cpp_notebook/primer/ch-05.md#control-structures) wherever possible to avoid possible subscripting bugs.
+- use range for loops wherever possible to avoid possible subscripting bugs.
 
 
 ## intro to iterators (3.4)
@@ -170,7 +170,7 @@ vector<T> v6(begin(otherContainer), end(otherContainer)); // v6 is a vector copi
 	- ***cbegin()* and *cend()* for read-only const versions.** (C++11)
 		- returns a read-only *const_iterator* type even if container itself is non*const*.
 - standard iterator operations
-	- dereference an iterator to obtain the underlying element.
+	- dereference an iterator to obtain (a reference to) the underlying element.
 		- **dereferencing an invalid iterator or an off-the-end iterator has undefined behavior.**
 		- **incrementing an off-the-end iterator is not allowed.**
 	- iterators are equal (==) if they denote the same element or if they are both off-the-end iterators for the same container.
@@ -198,7 +198,7 @@ for (auto iter = s.begin(); iter != s.end(); ++iter) {
 
 - **iterator arithmetic**
 	- *vector* and *string* support adding/subtracting integer values to iterators to move multiple positions.
-		- the resulting iterator must denote elements in the same container.
+		- the resulting iterator must denote an element in the same container.
 		- we can also subtract two iterators of the same vector or string. returns signed integral type *difference_type*.
 		- useful for things like binary search where we have to iterate from the middle.
 	- we can directly compare iterators in the same container with normal relational operators (<, <=, etc). the value for comparison is the iterator's position in the container.
@@ -209,8 +209,9 @@ for (auto iter = s.begin(); iter != s.end(); ++iter) {
 		- some iterators don't have the < operator. by routinely using !=, we don't have to worry about the precise type of the container we're processing.
 - ***common theme: use a const type when you need to read but not write to an object.***
 	- use cbegin() and cend() accordingly!
-- **loops that use iterators should not add elements to the container to which the iterators refer.**
+- **loops that use iterators should usually not add or remove elements to the container to which the iterators refer.**
 	- any operation that changes the size of a vector potentially invalidates all iterators into that vector.
+	- if you have to do this, [use caution](https://github.com/tedklin/pseudoblog/blob/master/cpp_notebook/primer/ch-09.md).
 
 
 ## built-in arrays (3.5)
@@ -219,14 +220,14 @@ for (auto iter = s.begin(); iter != s.end(); ++iter) {
 - arrays are a fixed-size data structure
 - built-in arrays are a compound type
 	- array declarators are of form *name[dim]*
-		- **dimension must be a constant expression greater than zero.**
+		- **dimension must be a [constant expression](https://github.com/tedklin/pseudoblog/blob/master/cpp_notebook/primer/ch-02.md#const-qualifier-24) greater than zero.**
 - initialization
 	- **arrays follow [default initialization](https://github.com/tedklin/pseudoblog/blob/master/cpp_notebook/primer/ch-02.md#variables-22) rules for built-in types**
 	- we can explicitly initialize array elements using list initialization.
 		- don't need to specify dimension if the number of elements inside the bracketed list is the dimension we want.
-		- specifying a dimension greater than the number of initializers in the list makes remaining elements *value-initialized*.
+		- specifying a dimension greater than the number of initializers in the list makes remaining elements *value-initialized* (see link above for default initialization).
 	- character arrays can be initialized from a string literal.
-		- includes the **null character '\0'** at the end of every string literal!
+		- includes the null character '\0' at the end, inherited from C-style character strings (see below).
 	- **we cannot copy-initialize an array from another array or assign arrays to each other.**
 		- inherited from C and/or [array-to-pointer decay](https://stackoverflow.com/questions/1461432/what-is-array-to-pointer-decay)?
 	- we cannot initialize an array from a vector, but we can initialize a vector from an array (see in vector section).
