--- a/cpp_notebook/primer/ch-04.md
+++ b/cpp_notebook/primer/ch-04.md
@@ -30,7 +30,7 @@
 	- a pointer / reference to *T* can be converted into a pointer / reference to *const T*.
 		- the reverse conversion does not exist.
 		- [see top-level vs low-level const](https://github.com/tedklin/pseudoblog/blob/master/cpp_notebook/primer/ch-02.md#const-qualifier-24)
-	- class types can define conversions
+	- [class types can define implicit conversions](https://github.com/tedklin/pseudoblog/blob/master/cpp_notebook/primer/ch-07.md#additional-class-features)
 		- for example, the iostream library defines a conversion from *istream* to *bool* (ch1).
 - **explicit conversions (casts)**
 	- **although necessary at times, casts are inherently dangerous!!!**
@@ -38,7 +38,7 @@
 		- useful for things like requesting floating point arithmetic on objects defined as integral.
 	- *const_cast* "casts away" a low-level const, removing the compiler's write restriction.
 		- however, using a const_cast to write to a const object is undefined!
-		- useful in the context of overloaded functions (6.4), otherwise avoid!
+		- might be used in the context of overloaded functions (6.4), but **core guidelines say don't use const_cast at all and find another way around your problem!**
 	- avoid *reinterpret_cast* and old style casts with parentheses.
 
 #### specific operators
