--- a/cpp_notebook/primer/ch-05.md
+++ b/cpp_notebook/primer/ch-05.md
@@ -45,7 +45,7 @@
 	- catch clause(s) include exception declaration.
 	- library exception classes have a member function ***what()*** that return a C-style character string (string literal) with info about the exception. 
 - standard library exception types
-	- the ***stdexcept*** header defines several general-purpose exception classes like ***runtime_error***.
+	- the [***stdexcept***](https://en.cppreference.com/w/cpp/header/stdexcept) header defines several general-purpose exception classes like ***runtime_error***.
 		- there are also exception types defined in the *new* and *type_info* headers, covered in ch12 and ch19.
 	- most exception types are direct initialized with a string / string literal that is used by the programmer to provide additional error messaging.
 		- for these types, the *what()* member returns the message the exception was initialized with.
