--- a/cpp_notebook/primer/ch-06.md
+++ b/cpp_notebook/primer/ch-06.md
@@ -90,6 +90,8 @@ int main() {
 - C programmers might often use pointer parameters to access objects outside a function. C++ programmers generally use reference parameters instead.
 - [pass by reference to const vs pass by value](https://stackoverflow.com/questions/270408/is-it-better-in-c-to-pass-by-value-or-pass-by-constant-reference)
 - see ch16 for functions with parameters whose type might vary (variadic templates).
+- **keep the number of function parameters low.**
+	- abstraction can help greatly with usability and maintainability down the road.
 
 
 ## *return* (6.3)
@@ -120,6 +122,7 @@ int main() {
 	- the presence of a top-level const in the parameter type is ignored and does not make a function different as to be overloaded.
 		- low-level const in the parameter type is not ignored and makes a difference.
 - *const_cast* with overloaded functions (refer to Primer)
+	- understand but don't do!
 - names do not overload across scopes
 	- recall that if we declare a name in an inner scope, that name hides uses of that name declared in an outer scope.
 	- names that are hidden are not even considered by the compiler.
