--- a/cpp_notebook/primer/ch-07.md
+++ b/cpp_notebook/primer/ch-07.md
@@ -3,7 +3,7 @@
 ## member functions
 
 ### new core ideas
-- declaration and definition of functions in / related to a class.
+- declaration and definition of functions in / related to a class:
 	- member functions must be declared inside the class body.
 	- member functions may be defined inside or outside the class body.
 		- conventionally defined (outside) in the source file corresponding to the header with the class body.
@@ -30,7 +30,7 @@
 	- see ch13 for how to define copy, assignment, and destruction for objects of a class type.
 
 ### misc conventions and tips
-- use const member functions where possible to increase flexibility and safety.
+- **use const member functions where possible to increase flexibility and safety.**
 - in practice, well designed C++ programs tend to have lots of small functions that are called to do the "real work" of some other set of functions.
 - terminology review: a class *definition* includes all of its member functions' *declarations*. a member function's *definition* does not need to appear in a class *definition* (and usually(?) appears in a separate source file).
 	- a member function whose definition appears in its class's definition is an *inline* function.
@@ -47,7 +47,7 @@
 	- a default constructor takes no arguments (usually has no parameters).
 		- a constructor that supplies default arguments for all its parameters also defines the default constructor.
 	- ***synthesized* default constructor**
-		- initializes members with **in-class intializers** or (if in-class initializers don't exist) performs **default intialization** on members.
+		- initializes members with **in-class initializers** or (if in-class initializers don't exist) performs **default intialization** on members.
 		- **synthesized default constructors are only used if:**
 			- a class does not explicitly define **any** constructor at all, in which case the compiler implicitly defines the default constructor as a synthesized default constructor.
 			- a class requests the compiler to use the synthesized default constructor by explicitly declaring or defining its default constructor with ***= default*** after the parameter list. (C++11)
@@ -128,7 +128,8 @@ private:
 
 ### misc conventions and tips
 - **routinely use constructor initializer lists!**
-	- **in constructor initializer lists, avoid using members to initialize other members** when possible, as the order of initialization depends on unobvious factors (see above).
+	- **make it a habit to order the list in the order it executes** (the order of variable declaration in the class definition).
+		- even having done that, **avoid using members to initialize other members in constructor initializer lists**, as it increases the possibility of future error. (there are a lot of situations where your variable declarations might change order in the future without you knowing / realizing.)
 - **stick with in-class initializers to specify default values for (non[static](#static-class-members)) data members of class type (and built-in types).** (C++11)
 	- only use default arguments in constructors if absolutely necessary.
 - **it is almost always right to explicitly provide a default constructor if other constructors are being defined.**
@@ -154,15 +155,14 @@ private:
 		- actual general declarations (and definitions) usually follow the same convention as other ["nonmember functions that are conceptually part of the interface of a class"](#member-functions).
 - **class friendship**
 	- a class makes a class its friend the same way it does with functions (declaration with *friend* prefix)
-	- class A declaring class B as a friend ("granting friendship to class B") allows class B's member functions access all of the members of an object of type A.
+	- class A declaring class B as a friend ("granting friendship to class B") grants class B's member functions access to all of the members of an object of type A.
 		- friendship is not transitive (the friends of class B don't have special access to class A).
 	- **classes and nonmember functions need not have been declared before they are used in a friend declaration.**
 		- when a name first appears in a friend declaration, they are implicitly assumed to be a part of the surrounding scope.
 		- however, (as stated above) friend declarations do not constitute an actual declaration.
 	- **class member function friendship**
 		- class A can also specify which specific class B member function has special access by declaring only that member function as a friend (with the appropriate *ClassBName::* scope prefix).
-			- the definition of class B (with the declaration of the member function to be friended by class A) must come before the definition of class A (with the friend declaration for the member function in class B).
-			- the definition of class A must come before the definition of the member function in class B (that has special access to class A).
+			- the definition of class B (with the declaration of the member function to be friended by class A) must come before the definition of class A (with the friend declaration for the member function in class B), which in turn must come before the definition of the member function of class B (that has special access to class A).
 
 
 ### misc conventions and tips
@@ -199,6 +199,7 @@ private:
 	- put off for now
 
 ### misc conventions and tips
+- *mutable* is useful for maintaining const-correctness by avoiding other "hack" fixes like const_cast or removing explicit const qualifiers all together.
 - [Google's C++ style guide](https://google.github.io/styleguide/cppguide.html#Implicit_Conversions) also does not allow implicit class-type conversions, so i think i'm safe just using *explicit* for all single-argument constructors for now.
 
 ## class scope
