--- a/cpp_notebook/primer/ch-11.md
+++ b/cpp_notebook/primer/ch-11.md
@@ -6,13 +6,12 @@ as with ch9, this will be a non-exhaustive list of main ideas and tips.
 - ordered associative containers are ordered by key and must have a key type that is comparable.
 - the unordered versions of associative containers are basically hashing versions.
 	- types used as keys in unordered containers must have a defined hashing object and == operator.
-	- refer to Primer for details.
-- **the keys in (all?) associative containers are const.**
+- **the keys in associative containers are const.**
 - ***pair*** defined in the *utility* header holds two public data members and is used to map keys to values.
 	- pair element are value initialized 
 - *value_type* for maps are *pair&lt;const key_type, mapped_type&gt;*, for sets are *key_type*.
 	- **dereferencing an iterator returns a reference to the associative container's respective *value_type*.**
-	- insert and erase operation type details in Primer.
+	- *insert* and *erase* operation type details in Primer.
 - **the subscript operator [ ] for a map takes a key as the argument and returns a *mapped_type* lvalue (so we can directly read or overwrite the "value" of the "key-value" pair).**
 	- **if the requested key is not already present, a new element is value-initialized and inserted into the map for that key!**
 		- different from other containers like [vector](https://github.com/tedklin/pseudoblog/blob/master/cpp_notebook/primer/ch-03.md#library-vector-type-33), where subscripting "out of range" is a serious error!!!
