--- a/cpp_notebook/primer/ch-09.md
+++ b/cpp_notebook/primer/ch-09.md
@@ -12,7 +12,7 @@ Primer seems to serve as a good standalone reference for info on sequential cont
 		- refer back to ch3, especially [sections on vectors and iterators](https://github.com/tedklin/pseudoblog/blob/master/cpp_notebook/primer/ch-03.md#library-vector-type-33).
 - sequential container **access operations return references**.
 	- if the container is const, then access returns a reference to const.
-	- if we use auto, we must still explicitly declare it a reference if we want to use it as such.
+	- recall that if we use auto, we must still explicitly declare it a reference if we want to use it as such.
 - **keep in mind that operations that add or remove elements may invalidate iterators, pointers, or references to other elements.**
 	- using an invalidated iterator/pointer/reference is a serious run-time error.
 	- avoid looping directly over the container you add to / remove from.
