beef up ch9 and 11 a bit

--- a/cpp_notebook/primer/ch-03.md
+++ b/cpp_notebook/primer/ch-03.md
@@ -29,7 +29,7 @@ int main() {
 ## library *string* type (3.2)
 
 ### new core ideas
-- strings are not *containers*, but support many container operations.
+- strings are a specialized form of *container*.
 - strings default initialize to the empty string.
 - **initialization forms** (general, not string-specific)
 	- ***copy initialization*** has an = sign and uses the right-side of the equal sign as the (single) initializing value.
