--- a/cpp_notebook/primer/ch-09.md
+++ b/cpp_notebook/primer/ch-09.md
@@ -4,17 +4,29 @@ Primer seems to serve as a good standalone reference for info on sequential cont
 
 ## main core ideas
 
-- **container elements are copies.** just like when we pass an object by value, there is no relationship between the element in the container and the object from which that value originated!
-- **iterator ranges are of the form [b, e).**
-- **don't use subscripts out of range.**
-- **be wary of <ins>any</ins> access operation on an *empty* container.**
+- types
+	- fast random access (think indices and subscripts), fast insert/delete only at the back (and front for deque):
+		- *vector*, *deque*, *string*
+	- only sequential access, fast insert/delete anywhere:
+		- *list* (bidirectional), *forward_list*
+	- *vector* is a good default sequential container.
+- adding elements
+	- *push_back*, *push_front*, *insert*, insert iterators (see ch10)
+	- **container elements are copies.** just like when we pass an object by value, there is no relationship between an element in the container and the object from which that value originated!
+- removing elements
+	- *pop_back*, *pop_front*, *erase*, *clear*
+- accessing elements
+	- subscripts and iterators
+	- **iterator ranges are of the form [b, e).**
+	- **don't use subscripts out of range.**
+	- sequential container **access operations return references**.
+		- if the container is const, then access returns a reference to const.
+		- recall that if we use auto, we must still explicitly declare it a reference if we want to use it as such.
+- **be wary of <ins>any</ins> access or removal operation on an *empty* container.**
 	- behavior is undefined, so compiler likely won't even tell you something's wrong.
-		- refer back to ch3, especially [sections on vectors and iterators](https://github.com/tedklin/pseudoblog/blob/master/cpp_notebook/primer/ch-03.md#library-vector-type-33).
-- sequential container **access operations return references**.
-	- if the container is const, then access returns a reference to const.
-	- recall that if we use auto, we must still explicitly declare it a reference if we want to use it as such.
-- **keep in mind that operations that add or remove elements may invalidate iterators, pointers, or references to other elements.**
-	- using an invalidated iterator/pointer/reference is a serious run-time error.
+	- refer back to ch3, especially [sections on vectors and iterators](https://github.com/tedklin/pseudoblog/blob/master/cpp_notebook/primer/ch-03.md#library-vector-type-33).
+- **keep in mind that operations that add or remove elements from vectors / strings / deques may invalidate iterators, pointers, or references to other elements in that container**
+	- using an invalidated iterator/pointer/reference is a serious run-time error!
 	- avoid looping directly over the container you add to / remove from.
 		- if you really need to do so, make sure that every iteration recalculates *end()* and updates iterators correctly.
 
