move linux notebook out to local

--- a/cpp_notebook/primer/ch-11.md
+++ b/cpp_notebook/primer/ch-11.md
@@ -14,7 +14,7 @@ as with ch9, this will be a non-exhaustive list of main ideas and tips.
 	- *insert* and *erase* operation type details in Primer.
 - **the subscript operator [ ] for a map takes a key as the argument and returns a *mapped_type* lvalue (so we can directly read or overwrite the "value" of the "key-value" pair).**
 	- **if the requested key is not already present, a new element is value-initialized and inserted into the map for that key!**
-		- different from other containers like [vector](https://github.com/tedklin/pseudoblog/blob/master/cpp_notebook/primer/ch-03.md#library-vector-type-33), where subscripting "out of range" is a serious error!!!
+		- different from other containers like [vector](https://github.com/tedklin/pseudoblog/blob/master/cpp_notebook/primer/ch-03.md#library-vector-type-33), where subscripting "out of range" is undefined!!!
 		- **use the *find* (returns iterator to found key, *== end()* if key not present) member method to access keys/values without changing the map**.
 			- *find* also good for sets.
 			- *count* (returns count of input key) for multimaps/multisets.
