clarifications on top-level const

--- a/cpp_notebook/primer/ch-06.md
+++ b/cpp_notebook/primer/ch-06.md
@@ -58,12 +58,13 @@ int main() {
 		- changes made to the variable inside the function have no effect on the initializer.
 	- pointers are also copied and can be used normally with address-type arguments (but generally use pass by reference instead).
 - **passing arguments by reference**
-	- reference parameters allow a function to change the value of corresponding arguments.
+	- reference (to nonconst) parameters allow a function to change the value of corresponding arguments.
 	- using reference parameters avoids inefficient large copies.
 		- some classes cannot be copied at all and require the use of reference parameters.
-	- references (and pointers) can be used to conceptually "return" multiple values from a function.
 - **const parameters and arguments**
 	- recall [top-level / low-level const rules](https://github.com/tedklin/pseudoblog/blob/master/cpp_notebook/primer/ch-02.md#const-qualifier-24).
+		- top-level const in parameter list is "ignored"
+			- both top-level const and nonconst arguments can be passed into both top-level const and nonconst parameters. the top-level const for a parameter only affects whether you can modify the value of the variable inside the function, which usually doesn't matter anyways because objects in functions are either copies or references.
 	- **reference parameters that are not changed inside a function should be *references to const*.**
 		- using a [plain reference](https://github.com/tedklin/pseudoblog/blob/master/cpp_notebook/primer/ch-02.md#compound-types-23) type parameter instead not only misleads the function caller, but also greatly limits the type of arguments that can be passed in! (can't pass const, literal, or any object that requires conversion)
 - array parameters
@@ -119,7 +120,7 @@ int main() {
 
 ### new core ideas
 - functions that have the same name and appear in the same scope but have different parameter lists are called overloaded functions.
-	- the presence of a top-level const in the parameter type is ignored and does not make a function different as to be overloaded.
+	- the presence of a top-level const in a parameter type does not make a function different as to be overloaded (you can pass in both top-level const and nonconst arguments to both top-level const and nonconst parameters).
 		- low-level const in the parameter type is not ignored and makes a difference.
 - *const_cast* with overloaded functions (refer to Primer)
 	- understand but don't do!
