--- a/cpp_notebook/primer/ch-07.md
+++ b/cpp_notebook/primer/ch-07.md
@@ -206,8 +206,8 @@ private:
 
 ### new core ideas
 - **every class defines its own new scope.**
-	- the name of a member defined outside the class body must include a scope prefix (***className::***) indicating the class it belongs to.
-		- constructors defined outside would have the form *className::className*
+	- the name of a member defined outside the class body must include a scope prefix (***ClassName::***) indicating the class it belongs to.
+		- constructors defined outside would have the form *ClassName::ClassName*
 		- once the compiler sees the prefix with the scope operator in a function name, the rest of the function definition is interpreted as being inside the scope of the class (we can access other members normally without extra qualifications).
 			- **this includes the parameter list but excludes the return type**, which could be a [type member](#additional-class-features).
 - member function **definitions** are processed **after** the compiler processes **all** of the **declarations** in the class.
@@ -223,7 +223,7 @@ private:
 		2. if not found, look for the name declaration inside the class of the member function (all members of the class are considered).
 		3. if still not found, look for the name declaration before (above) the member function definition (in the outer scope).
 	- to override this lookup order (if you want to access a name that's been *hidden* by a "closer" declaration), use the scope operator.
-		- *className::* can access a hidden member variable and *::* by itself can access a hidden name from the outer scope.
+		- *ClassName::* can access a hidden member variable and *::* by itself can access a hidden name from the outer scope.
 		- **you shouldn't need to override anything if you choose names that won't hide each other when you don't want them to.**
 
 
